# semtex-client

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
src/: Dockerfile  ExchangeClient.h  main.cpp
src/util/: Timestamp.h
